--- a/css/portfolio-4644d0.webflow.css
+++ b/css/portfolio-4644d0.webflow.css
@@ -1752,7 +1752,7 @@ a {
 
 #w-node-bcd87ecd-9125-63a8-4f73-6fbb14325a4e-25094b86, #w-node-_9ed018da-cd55-dd5c-1e10-6309a537daec-25094b86 {
   grid-template-rows: auto;
-  grid-template-columns: .55fr 1.5fr;
+  grid-template-columns: .45fr .75fr;
 }
 
 #w-node-bdfdf643-efa6-f5dd-bb06-0cd4b95274a9-25094b86 {
@@ -1766,7 +1766,7 @@ a {
 
 #w-node-_93fbfacd-cfd7-cd77-d62f-bd5afef65350-25094b86 {
   grid-template-rows: auto;
-  grid-template-columns: .55fr 1.5fr;
+  grid-template-columns: .45fr .75fr;
 }
 
 #w-node-cb703668-6583-4174-9e05-3b2b3f599283-25094b8a, #w-node-cb703668-6583-4174-9e05-3b2b3f599286-25094b8a, #w-node-cb703668-6583-4174-9e05-3b2b3f599295-25094b8a, #w-node-cb703668-6583-4174-9e05-3b2b3f599298-25094b8a, #w-node-_345890c5-3062-bd9b-b425-4c0d46681f8e-25094b8b, #w-node-_624563ea-c5c1-891c-1330-443705c91ab9-25094b8b {
